--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body {background-color: #EADDCA;}
-h1 {background-color: #C19A6B;
+
+body {background-color: #050e86;}
+h1 {background-color: #cab193;
 padding: 40px;
 font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
 font-size: 35px;}
