--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-body {background-color: #050e86;}
+body {background-color: #071094;}
 h1 {background-color: #cab193;
 padding: 40px;
 font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
